# agent-demo-app

./: .env.example  .gitignore  backend.py  index.html  modal_app.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.js  style.css
